<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.example.android.krakowquizapp.MainActivity">

        <TextView
            style="@style/question_style"
            android:text="@string/first_question" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a1"
            android:id="@+id/nobelOne"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a2"
            android:id="@+id/nobelTwo"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1a3"
            android:id="@+id/nobelThree"/>

        <View style="@style/separation_line" />

        <TextView
            style="@style/question_style"
            android:text="@string/second_question" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/citizensOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_answer_of_first_question" />

        <RadioButton
            android:id="@+id/citizensTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_answer_of_first_question" />

        <RadioButton
            android:id="@+id/citizensThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_answer_of_first_question" />

        </RadioGroup>

        <View style="@style/separation_line" />

        <TextView
            style="@style/question_style"
            android:text="@string/fifth_question" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a1"
            android:id="@+id/riverOne"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a2"
            android:id="@+id/riverTwo"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a3"
            android:id="@+id/riverThree"/>

        <View style="@style/separation_line" />

        <TextView
            style="@style/question_style"
            android:text="@string/third_question" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wawel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button"
            android:onClick="showResult"/>

        <TextView
            style="@style/question_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your result: "
            android:id="@+id/quiz_score"/>

    </LinearLayout>

</ScrollView>